<resources>
    <string name="app_name">SocialNetWork</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="CreateAccount">Create Account</string>
    <string name="Login">Login</string>
    <string name="DontHaveAnAccount">Don\'t Have An Account, Need New Account</string>
    <string name="orLoginOther">Or Login With</string>
    <string name="fullName">FullName</string>
    <string name="country">Country</string>
    <string name="setup_btn_save">Save</string>
    <string name="updatePost">Update Post</string>
    <string name="deletepost">deletePost</string>
    <string name="editpost">editpost</string>
    <string name="setting_username">username</string>
    <string name="setting_profile_status">profile</string>
    <string name="setting_user_fullname">fullname</string>
    <string name="setting_country">country</string>
    <string name="setting_dob">dob</string>
    <string name="setting_gender">gender</string>
    <string name="setting_relationship_status">relationship</string>
    <string name="setting_update_account_button">Update Imformation</string>
    <string name="findfriends">please write username</string>
    <string name="searchinput">Search here...</string>
    <string name="userName">username</string>
    <string name="comments">Comments：</string>
    <string name="writesoming">Write a comment here</string>
    <string name="forgetPassword">忘記密碼</string>
</resources>
