<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".SettingsActivity">

    <include android:id="@+id/settings_toolbar"
        layout="@layout/app_bar_layout">

    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="512dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/settings_profile_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile"/>

            <EditText
                android:id="@+id/settings_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_profile_image"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/inputs"
                android:hint="@string/setting_profile_status"
                android:padding="30dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/settings_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_status"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/inputs"
                android:hint="@string/setting_username"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/settings_profile_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_username"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/inputs"
                android:hint="@string/setting_user_fullname"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/settings_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_profile_full_name"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/inputs"
                android:hint="@string/setting_country"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/settings_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_country"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/inputs"
                android:hint="@string/setting_dob"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/settings_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_dob"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/inputs"
                android:hint="@string/setting_gender"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/settings_relationgship_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settings_gender"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/inputs"
                android:hint="@string/setting_relationship_status"
                android:padding="12dp"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/update_account_settings_buttons"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/settings_relationgship_status"
                android:text="@string/setting_update_account_button"
                android:layout_margin="20dp"
                android:background="@drawable/button"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textAllCaps="false"
                />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>